搭建前端框架

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 <body>
     <div class="wrap">
         <div id="js-wrap"></div>
-        <ul class="nav flex-equal">
+        <ul class="nav flex-equal" id="js-navs">
             <li class="on">
-                <a href="javascript:;" data-page="xiadan">我要下单</a>
+                <a href="#index/index">我要下单</a>
             </li>
             <li>
-                <a href="javascript:;" data-page="geren">个人中心</a>
+                <a href="#geren/index">个人中心</a>
             </li>
             <li>
-                <a href="javascript:;" data-page="kefu">客服电话</a>
+                <a href="#kefu/index">客服电话</a>
             </li>
         </ul>
         <div class="pop loading hide" id="js-loading">
