--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 //基础库
                 'underscore': 'lib/underscore',
                 'backbone': 'lib/backbone',
-                'Jser': 'lib/Jser',
-                '$': 'lib/jquery'
+                '$': 'lib/jquery',
+                'Jser': 'lib/Jser'
             }
         });
     ST = {
@@ -45,11 +45,11 @@
             <div class="load-png">
                 <img src="resource/images/shuxin.gif" style="vertical-align:middle">&nbsp;&nbsp;奋力加载中...</div>
         </div>
-        <div class="pop js-pop hide">
+        <div class="pop" id="js-pop123456">
             <div class="pop-inner">
                 <div class="pop-msg js-pop-txt">这个是测试的</div>
                 <div class="pop-btn-box flex-equal">
-                    <a href="javascript:;" class="js-close">好</a>
+                    <a href="javascript:;" class="js-close" data-uid="123456">好</a>
                 </div>
             </div>
         </div>
