--- a/tpl/index/index.html
+++ b/tpl/index/index.html
@@ -2,13 +2,12 @@
 	选择美容师
 	<a href="javascript:;" class="hd-btn">
 		北京
-		<span class="rotatedown">&lt;</span>
 	</a>
 </div>
 <ul class="page-list js-list">
 	<li>
 		<div class="list-left">
-			<img src="resource/images/1.png" />
+			<a href="#role/index"><img src="resource/images/loadimg.png" data-src="resource/images/1.png"/></a>
 			<div class="heart"><div class="hasheart" style="width:80px;"></div></div>
 		</div>
 		<div class="list-right">
@@ -20,7 +19,7 @@
 	</li>
 	<li>
 		<div class="list-left">
-			<img src="resource/images/2.png" />
+			<a href="#role/index"><img src="resource/images/loadimg.png" data-src="resource/images/2.png"/></a>
 			<div class="heart"><div class="hasheart" style="width:80px;"></div></div>
 		</div>
 		<div class="list-right">
@@ -32,7 +31,7 @@
 	</li>
 	<li>
 		<div class="list-left">
-			<img src="resource/images/2.png" />
+			<a href="#role/index"><img src="resource/images/loadimg.png" data-src="resource/images/2.png"/></a>
 			<div class="heart"><div class="hasheart" style="width:80px;"></div></div>
 		</div>
 		<div class="list-right">
@@ -44,7 +43,7 @@
 	</li>
 	<li>
 		<div class="list-left">
-			<img src="resource/images/1.png" />
+			<a href="#role/index"><img src="resource/images/loadimg.png" data-src="resource/images/1.png"/></a>
 			<div class="heart"><div class="hasheart" style="width:80px;"></div></div>
 		</div>
 		<div class="list-right">
@@ -56,7 +55,7 @@
 	</li>
 	<li>
 		<div class="list-left">
-			<img src="resource/images/1.png" />
+			<a href="#role/index/diyid:123"><img src="resource/images/loadimg.png" data-src="resource/images/1.png"/></a>
 			<div class="heart"><div class="hasheart" style="width:80px;"></div></div>
 		</div>
 		<div class="list-right">
