前端代码提交

--- a/tpl/index/index.html
+++ b/tpl/index/index.html
@@ -4,6 +4,7 @@
 		北京
 	</a>
 </div>
+<input type='date'/>
 <ul class="page-list js-list">
 	<li>
 		<div class="list-left">
@@ -14,7 +15,7 @@
 			<p class="name">高圆圆</p>
 			<p>300单</p>
 			<p class="info">擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等</p>
-			<a href="javascript:;" class="list-btn">约TA</a>
+			<a href="#role/index" class="list-btn">约TA</a>
 		</div>
 	</li>
 	<li>
@@ -26,7 +27,7 @@
 			<p class="name">赵又廷</p>
 			<p>300单</p>
 			<p class="info">擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等</p>
-			<a href="javascript:;" class="list-btn">约TA</a>
+			<a href="#role/index" class="list-btn">约TA</a>
 		</div>
 	</li>
 	<li>
@@ -38,7 +39,7 @@
 			<p class="name">赵又廷</p>
 			<p>300单</p>
 			<p class="info">擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等</p>
-			<a href="javascript:;" class="list-btn">约TA</a>
+			<a href="#role/index" class="list-btn">约TA</a>
 		</div>
 	</li>
 	<li>
@@ -50,7 +51,7 @@
 			<p class="name">高圆圆</p>
 			<p>300单</p>
 			<p class="info">擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等</p>
-			<a href="javascript:;" class="list-btn">约TA</a>
+			<a href="#role/index" class="list-btn">约TA</a>
 		</div>
 	</li>
 	<li>
@@ -62,7 +63,7 @@
 			<p class="name">高圆圆</p>
 			<p>300单</p>
 			<p class="info">擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等擅长跟宠物沟通，清洗，修建等</p>
-			<a href="javascript:;" class="list-btn">约TA</a>
+			<a href="#role/index" class="list-btn">约TA</a>
 		</div>
 	</li>
 </ul>
