--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     </script>
 </head>
 <body>
-    <div class="wrap">
+    <div class="wrap js-wrapper">
         <div id="js-wrap"></div>
-        <ul class="nav flex-equal hide" id="js-navs">
+        <!-- <a class="totop" href="javascript:;" id="js-totop"></a> -->
+        <ul class="nav flex-equal vishide" id="js-navs">
             <li class="on">
                 <a href="#index/index">我要下单</a>
             </li>
@@ -43,14 +44,17 @@
         </ul>
         <div class="pop loading hide" id="js-loading">
             <div class="load-png">
-                <img src="resource/images/shuxin.gif" style="vertical-align:middle">&nbsp;&nbsp;奋力加载中...
-            </div>
+                <img src="resource/images/shuxin.gif" style="vertical-align:middle">&nbsp;&nbsp;奋力加载中...</div>
         </div>
-        <div class="pop hide" id="js-pop123456">
-            <div class="pop-inner">
-                <div class="pop-msg js-pop-txt">这个是测试的</div>
-                <div class="pop-btn-box flex-equal">
-                    <a href="javascript:;" class="js-close" data-uid="123456">好</a>
+    </div>
+    <div class="tpl hide">
+        <div id="js-pop-tpl">
+            <div class="pop">
+                <div class="pop-inner">
+                    <div class="pop-msg js-pop-txt">这个是测试的</div>
+                    <div class="pop-btn-box flex-equal">
+                        <a href="javascript:;" class="js-close" data-uid="123456">好</a>
+                    </div>
                 </div>
             </div>
         </div>
