--- a/tpl/comment/index.html
+++ b/tpl/comment/index.html
@@ -16,6 +16,16 @@
 			<li>水平超群</li>
 			<li>服务一流</li>
 		</ul>
+		<ul class="comment-area-list comment-bad-list clean">
+			<li>耐心细心</li>
+			<li>准时到达</li>
+			<li>水平超群</li>
+			<li>服务一流</li>
+			<li>耐心细心</li>
+			<li>准时到达</li>
+			<li>水平超群</li>
+			<li>服务一流</li>
+		</ul>
 		<div class="comment-area-text">
 			<textarea>补充说明：日前黑莓发布了2014年第三财季财报，数据显示第三财季黑莓营收为12亿美元，同比下滑56%，亏损高达1.48亿美元，收入较上个季度下滑13.43%，业绩惨淡。黑莓在全球市场份额甚至已经跌倒仅为1%。但从另一面看，在黑莓CEO程守宗带领下，黑莓展开了系列复兴措施与计划，比如对黑莓进行了重组，厘清了各部门职权与公司未来发展的战略方向，聚焦安全领域的投入，实行战略收缩。黑莓还与富士康达成5年的合作协议，并计划面向印尼及其他新兴市场的生产廉价智能手机，打破了外界关于黑莓放弃硬件业务的传言。另外黑莓还收购了虚拟SIM卡厂商Movirtu和加密公司Secusmart。
 			</textarea>
@@ -24,7 +34,6 @@
 			匿名
 			<input type="checkbox"/>
 		</label>
-
+		<div class="btn comment-btn">发表</div>
 	</div>
 </div>
-<div class="footer second-footer">发表</div>
