--- a/tpl/geren/index.html
+++ b/tpl/geren/index.html
@@ -1,1 +1,18 @@
-<h2>这个是 个人页面 </h2>
+<div class="header second-header">
+	<a href="javascript:;" class="btn-back js-back"></a>
+	个人中心
+</div>
+<div class="second-wrapper geren-wrapper">
+	<ul class="geren-list">
+		<li>
+			<a href="#anli/index">
+				我的订单
+			</a>
+		</li>
+		<li>
+			<a href="#anli/index">
+				健康日记
+			</a>
+		</li>
+	</ul>
+</div>
