--- a/tpl/role/index.html
+++ b/tpl/role/index.html
@@ -22,7 +22,7 @@
 	<div class="role-area">
 		<div class="role-top">
 			照片展示
-			<a href="more" class="more">查看更多&gt;</a>
+			<a href="#zuopin/index" class="more">查看更多&gt;</a>
 		</div>
 		<div class="role-panel">
 			<ul class="flex-equal role-pic">
@@ -137,10 +137,10 @@
 					<p class="textright">2014年12月25日</p>
 				</li>
 			</ul>
-			<div class="list-loading">
-				加载更多 <i class="loading-icon"></i>
+			<div class="list-loading js-list-loading">
+				正在奋力加载中 <i class="loading-icon"></i>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="footer second-footer">约TA</div>
+<a class="footer second-footer" href="#zhifu/index">约TA</a>
